--- a/.env.example
+++ b/.env.example
@@ -103,6 +103,7 @@ ASSETS_INTERNAL_ENDPOINT=
 # --- local storage config ---
 #IMAGES|VIDEOS|FILES|CHUNKS_STORAGE=local|minio|qiniu
 
+UPLOADER_ENABLE=true
 IMAGES_STORAGE=
 VIDEOS_STORAGE=
 FILES_STORAGE=
