--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^6.10.2",
+    "@types/amqplib": "^0.5.13",
     "@types/bluebird": "^3.5.29",
     "@types/bull": "^3.10.6",
     "@types/cli-color": "^0.3.30",
@@ -47,7 +48,7 @@
     "eslint-plugin-jest": "^23.0.5",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-unicorn": "^13.0.0",
+    "eslint-plugin-unicorn": "^14.0.0",
     "jest": "^24.9.0",
     "nodemon": "^2.0.1",
     "prettier": "^1.19.1",
@@ -63,7 +64,7 @@
     "@nestjs/cqrs": "^6.1.0",
     "@nestjs/graphql": "^6.5.3",
     "@nestjs/jwt": "^6.1.1",
-    "@nestjs/passport": "^6.1.0",
+    "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.10.2",
     "@nestjs/platform-socket.io": "^6.10.2",
     "@nestjs/platform-ws": "^6.10.2",
