chore: upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/bull": "^3.10.6",
     "@types/cli-color": "^0.3.30",
     "@types/common-tags": "^1.8.0",
+    "@types/email-templates": "^6.0.1",
     "@types/express": "4.17.0",
     "@types/fs-extra": "^8.0.1",
     "@types/highland": "^2.12.4",
@@ -54,7 +55,7 @@
     "sqlite3": "^4.1.0",
     "supertest": "^4.0.2",
     "ts-jest": "^24.2.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.3"
   },
   "dependencies": {
     "@godaddy/terminus": "^4.3.1",
@@ -67,7 +68,7 @@
     "@nestjs/platform-express": "^6.10.5",
     "@nestjs/platform-socket.io": "^6.10.5",
     "@nestjs/platform-ws": "^6.10.5",
-    "@nestjs/swagger": "^4.0.1",
+    "@nestjs/swagger": "^4.0.2",
     "@nestjs/terminus": "^6.5.3",
     "@nestjs/typeorm": "^6.2.0",
     "@nestjs/websockets": "^6.10.5",
@@ -86,7 +87,6 @@
     "email-templates": "^6.0.4",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
-    "fastify-swagger": "^2.4.0",
     "file-type": "^12.4.0",
     "fs-extra": "^8.1.0",
     "graphql": "^14.5.8",
@@ -103,8 +103,8 @@
     "minio": "^7.0.12",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "node-buffs": "^0.6.17",
-    "nodemailer": "^6.3.1",
+    "node-buffs": "^0.6.18",
+    "nodemailer": "^6.4.0",
     "otplib": "^11.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
