--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/pump": "^1.1.0",
     "@types/sharp": "^0.23.1",
     "@types/socket.io": "^2.1.4",
+    "@types/supertest": "^2.0.8",
     "@types/uuid": "^3.4.6",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "eslint": "^6.7.2",
