--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "@types/mime-types": "^2.1.0",
     "@types/minio": "^7.0.4",
     "@types/multer": "^1.3.10",
+    "@types/node-fetch": "^2.5.4",
     "@types/passport": "^1.0.2",
     "@types/passport-jwt": "^3.0.3",
     "@types/pump": "^1.1.0",
+    "@types/redis": "^2.8.14",
+    "@types/redlock": "^4.0.1",
     "@types/sharp": "^0.23.1",
     "@types/socket.io": "^2.1.4",
     "@types/supertest": "^2.0.8",
@@ -105,6 +108,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "node-buffs": "^0.6.19",
+    "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.1",
     "otplib": "^11.0.1",
     "passport": "^0.4.1",
@@ -113,6 +117,7 @@
     "qiniu": "^7.2.2",
     "qrcode": "^1.4.4",
     "ramda": "^0.26.1",
+    "redlock": "^4.1.0",
     "response-time": "^2.3.2",
     "rxjs": "^6.5.3",
     "sharp": "^0.23.4",
