feat: add random sys password generator

--- a/.env.dev
+++ b/.env.dev
@@ -2,6 +2,8 @@ LOGGER_LEVEL=debug
 # SECRET_KEY=
 DB_TYPE=sqlite
 
+SYS_ADMIN_PASSWORD=password
+
 # --- sqlite ---
 TYPEORM_LOGGING=error
 TYPEORM_CONNECTION=sqlite
