--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,11 @@ RESOURCE_PATH=/uploads
 # default: http://127.0.0.1:5000
 MASTER_ADDRESS=http://127.0.0.1:5000
 
+# default:admin@example.com
+SYS_ADMIN_EMAIL=admin@example.com
+# 为空时生成随机密码
+SYS_ADMIN_PASSWORD=
+
 # --- mq ---
 # default: false
 MQ_ENABLE=false
