--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/redis": "^2.8.14",
     "@types/redlock": "^4.0.1",
     "@types/sharp": "^0.23.1",
+    "@types/shortid": "^0.0.29",
     "@types/socket.io": "^2.1.4",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^3.4.6",
@@ -98,7 +99,6 @@
     "hashids": "^2.1.0",
     "helmet": "^3.21.2",
     "highland": "^3.0.0-beta.10",
-    "idx": "^2.5.6",
     "jsondiffpatch": "^0.3.11",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
