--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "@types/bull": "^3.10.6",
     "@types/cli-color": "^0.3.30",
     "@types/common-tags": "^1.8.0",
+    "@types/compression": "^1.0.1",
     "@types/email-templates": "^6.0.2",
     "@types/express": "4.17.0",
+    "@types/express-rate-limit": "^3.3.3",
     "@types/fs-extra": "^8.0.1",
+    "@types/helmet": "^0.0.45",
     "@types/highland": "^2.12.4",
     "@types/jest": "^24.0.23",
     "@types/lru-cache": "^5.1.0",
     "@types/mime-types": "^2.1.0",
     "@types/minio": "^7.0.4",
+    "@types/morgan": "^1.7.37",
     "@types/multer": "^1.3.10",
     "@types/node-fetch": "^2.5.4",
     "@types/passport": "^1.0.2",
@@ -38,6 +42,7 @@
     "@types/pump": "^1.1.0",
     "@types/redis": "^2.8.14",
     "@types/redlock": "^4.0.1",
+    "@types/response-time": "^2.3.4",
     "@types/sharp": "^0.23.1",
     "@types/shortid": "^0.0.29",
     "@types/socket.io": "^2.1.4",
