--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@nestjs/terminus": "^6.5.3",
     "@nestjs/typeorm": "^6.2.0",
     "@nestjs/websockets": "^6.10.10",
+    "accesscontrol": "^2.2.1",
     "apollo-server-express": "^2.9.13",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
