--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ AUDIT=false
 SWAGGER=false
 # default: 5000
 PORT=5000
-# default: 2mb ; post json 的 body 大小
+# default: 20mb ; post json 的 body 大小
 PAYLOAD_LIMIT=50mb
 # default: 3
 UPLOADER_MAX_COUNT=10
@@ -45,8 +45,8 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 # (Optional)
 REDIS_PASSWORD=
-# (Optional)
-REDIS_DB=
+# default: 0
+REDIS_DB=0
 
 # other modules used
 # default: 1
