fix: node-buffs

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@
 LOGGER_LEVEL=info
 #ADMIN_SECRET_KEY=
 # default: secret
-SECRET_KEY=secret
+SECRET_KEY=
 # 是否开启审计模式
 AUDIT=false
 # ; endpoint is /swagger
@@ -63,7 +63,7 @@ JOB_REDIS_DB=2
 
 # --- mysql ---
 # default: mysql57 ; mysql56 | mysql57 | postgres
-DB_TYPE=mysql57
+DB_TYPE=
 TYPEORM_SYNCHRONIZE=false
 #TYPEORM_DEBUG=true
 # error | true
