--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/helmet": "^0.0.45",
     "@types/highland": "^2.12.4",
     "@types/jest": "^24.0.23",
+    "@types/lodash": "^4.14.149",
     "@types/lru-cache": "^5.1.0",
     "@types/mime-types": "^2.1.0",
     "@types/minio": "^7.0.4",
