--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,22 +16,18 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, build, and test
+      - name: yarn install
         run: |
-          echo HOME: $HOME
-          echo GITHUB_WORKFLOW: $GITHUB_WORKFLOW
-          echo GITHUB_ACTION: $GITHUB_ACTION
-          echo GITHUB_ACTOR: $GITHUB_ACTOR
-          echo GITHUB_REPOSITORY: $GITHUB_REPOSITORY
-          echo GITHUB_EVENT_NAME: $GITHUB_EVENT_NAME
-          echo GITHUB_EVENT_PATH: $GITHUB_EVENT_PATH
-          echo GITHUB_WORKSPACE: $GITHUB_WORKSPACE
-          echo GITHUB_SHA: $GITHUB_SHA
-          echo GITHUB_REF: $GITHUB_REF
-          echo GITHUB_HEAD_REF: $GITHUB_HEAD_REF
-          echo GITHUB_BASE_REF: $GITHUB_BASE_REF
-          npm install
-          npm run build --if-present
-          npm test
+          yarn
+        env:
+          CI: true
+      - name: yarn build
+        run: |
+          yarn build
+        env:
+          CI: true
+      - name: yarn test
+        run: |
+          yarn test
         env:
           CI: true
