--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/socket.io": "^2.1.4",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^3.4.6",
+    "@types/wx-server-sdk": "^0.8.0",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-typescript": "^6.3.1",
@@ -118,6 +119,7 @@
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.2",
     "otplib": "^11.0.1",
+    "ow": "^0.15.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pump": "^3.0.0",
@@ -134,6 +136,7 @@
     "swagger-ui-express": "^4.1.2",
     "typeorm": "^0.2.21",
     "validator": "^12.1.0",
+    "wx-server-sdk": "^1.6.0",
     "xlsx": "^0.15.3"
   }
 }
