--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/common-tags": "^1.8.0",
     "@types/compression": "^1.0.1",
     "@types/email-templates": "^6.0.2",
-    "@types/express": "4.17.0",
+    "@types/express": "^4.17.2",
     "@types/express-rate-limit": "^3.3.3",
     "@types/fs-extra": "^8.0.1",
     "@types/helmet": "^0.0.45",
@@ -60,7 +60,7 @@
     "eslint-plugin-jest": "^23.1.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-unicorn": "^14.0.1",
+    "eslint-plugin-unicorn": "^15.0.0",
     "jest": "^24.9.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
