refactor: base entities

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jest": "^24.0.24",
     "@types/lodash": "^4.14.149",
     "@types/lru-cache": "^5.1.0",
+    "@types/luxon": "^1.21.0",
     "@types/mime-types": "^2.1.0",
     "@types/minio": "^7.0.5",
     "@types/morgan": "^1.7.37",
@@ -111,6 +112,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
+    "luxon": "^1.21.3",
     "mime-types": "^2.1.25",
     "minio": "^7.0.13",
     "morgan": "^1.9.1",
