fix: type issue

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "check:circular": "npx madge --circular --extensions ts ./"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.10.13",
+    "@nestjs/testing": "^6.10.14",
     "@types/amqplib": "^0.5.13",
     "@types/bluebird": "^3.5.29",
     "@types/bull": "^3.10.6",
@@ -51,7 +51,8 @@
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^3.4.6",
     "@types/wx-server-sdk": "^0.8.0",
-    "@typescript-eslint/eslint-plugin": "^2.14.0",
+    "@types/xml2js": "^0.4.5",
+    "@typescript-eslint/eslint-plugin": "^2.15.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^6.3.1",
     "eslint-config-prettier": "^6.9.0",
@@ -67,27 +68,27 @@
     "prettier": "^1.19.1",
     "sqlite3": "^4.1.1",
     "supertest": "^4.0.2",
-    "ts-jest": "^24.2.0",
+    "ts-jest": "^24.3.0",
     "typescript": "^3.7.4"
   },
   "dependencies": {
     "@godaddy/terminus": "^4.3.1",
-    "@nestjs/common": "^6.10.13",
-    "@nestjs/core": "^6.10.13",
+    "@nestjs/common": "^6.10.14",
+    "@nestjs/core": "^6.10.14",
     "@nestjs/cqrs": "^6.1.0",
     "@nestjs/graphql": "^6.5.3",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.1",
-    "@nestjs/platform-express": "^6.10.13",
-    "@nestjs/platform-socket.io": "^6.10.13",
-    "@nestjs/platform-ws": "^6.10.13",
-    "@nestjs/swagger": "^4.1.2",
+    "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/platform-socket.io": "^6.10.14",
+    "@nestjs/platform-ws": "^6.10.14",
+    "@nestjs/swagger": "^4.1.7",
     "@nestjs/terminus": "^6.5.5",
     "@nestjs/typeorm": "^6.2.0",
-    "@nestjs/websockets": "^6.10.13",
+    "@nestjs/websockets": "^6.10.14",
     "accesscontrol": "^2.2.1",
     "apollo-server-express": "^2.9.15",
-    "axios": "^0.19.0",
+    "axios": "^0.19.1",
     "body-parser": "^1.19.0",
     "bull": "^3.12.1",
     "class-transformer": "^0.2.3",
@@ -96,12 +97,12 @@
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
     "dataloader": "^2.0.0",
-    "date-fns": "^2.8.1",
-    "dayjs": "^1.8.18",
+    "date-fns": "^2.9.0",
+    "dayjs": "^1.8.19",
     "email-templates": "^6.1.1",
     "express": "^4.17.1",
     "express-rate-limit": "^5.0.0",
-    "file-type": "^12.4.2",
+    "file-type": "^13.0.3",
     "fs-extra": "^8.1.0",
     "graphql": "^14.5.8",
     "graphql-type-json": "^0.3.1",
@@ -113,7 +114,7 @@
     "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
     "luxon": "^1.21.3",
-    "mime-types": "^2.1.25",
+    "mime-types": "^2.1.26",
     "minio": "^7.0.13",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
@@ -139,6 +140,7 @@
     "typeorm": "^0.2.22",
     "validator": "^12.1.0",
     "wx-server-sdk": "^1.7.1",
-    "xlsx": "^0.15.4"
+    "xlsx": "^0.15.4",
+    "xml2js": "^0.4.23"
   }
 }
