--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-unicorn": "^15.0.1",
+    "husky": "^4.0.3",
     "jest": "^24.9.0",
     "nodemon": "^2.0.2",
+    "precise-commits": "^1.0.2",
     "prettier": "^1.19.1",
     "sqlite3": "^4.1.1",
     "supertest": "^4.0.2",
@@ -142,5 +144,10 @@
     "wx-server-sdk": "^1.7.1",
     "xlsx": "^0.15.4",
     "xml2js": "^0.4.23"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "precise-commits"
+    }
   }
 }
