--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "@nestjs/platform-express": "^6.10.14",
     "@nestjs/platform-socket.io": "^6.10.14",
     "@nestjs/platform-ws": "^6.10.14",
-    "@nestjs/swagger": "^4.1.13",
+    "@nestjs/swagger": "^4.1.14",
     "@nestjs/terminus": "^6.5.5",
     "@nestjs/typeorm": "^6.2.0",
     "@nestjs/websockets": "^6.10.14",
@@ -109,6 +109,7 @@
     "graphql": "^14.5.8",
     "graphql-type-json": "^0.3.1",
     "hashids": "^2.1.0",
+    "hbs": "^4.1.0",
     "helmet": "^3.21.2",
     "highland": "^3.0.0-beta.10",
     "jsondiffpatch": "^0.4.1",
