--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "sqlite3": "^4.1.1",
     "supertest": "^4.0.2",
     "ts-jest": "^25.0.0",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
   "dependencies": {
@@ -106,7 +107,7 @@
     "express-rate-limit": "^5.0.0",
     "file-type": "^13.1.2",
     "fs-extra": "^8.1.0",
-    "graphql": "^14.5.8",
+    "graphql": "^14.6.0",
     "graphql-type-json": "^0.3.1",
     "hashids": "^2.1.0",
     "hbs": "^4.1.0",
@@ -116,7 +117,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "lru-cache": "^5.1.1",
-    "luxon": "^1.21.3",
+    "luxon": "^1.22.0",
     "mime-types": "^2.1.26",
     "minio": "^7.0.13",
     "morgan": "^1.9.1",
@@ -125,7 +126,7 @@
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.2",
     "otplib": "^12.0.1",
-    "ow": "^0.15.0",
+    "ow": "^0.15.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pump": "^3.0.0",
