--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/cli-color": "^2.0.0",
     "@types/common-tags": "^1.8.0",
     "@types/compression": "^1.0.1",
+    "@types/cron": "^1.7.1",
     "@types/email-templates": "^6.0.2",
     "@types/express": "^4.17.2",
     "@types/express-rate-limit": "^3.3.3",
@@ -99,6 +100,7 @@
     "cli-color": "^2.0.0",
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
+    "cron": "^1.8.2",
     "dataloader": "^2.0.0",
     "date-fns": "^2.9.0",
     "dayjs": "^1.8.19",
