refactor: storage engine

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ SWAGGER=false
 # default: 5000
 PORT=5000
 # default: 20mb ; post json 的 body 大小
-PAYLOAD_LIMIT=50mb
+PAYLOAD_LIMIT=200mb
 # default: 3
 UPLOADER_MAX_COUNT=10
 # default: /uploads
@@ -98,26 +98,34 @@ TYPEORM_PASSWORD=
 # type: ioredis/cluster
 #TYPEORM_CACHE=ioredis/cluster
 
-# --- assets endpoint
+# --- default assets endpoint
 ASSETS_ENDPOINT=
 ASSETS_INTERNAL_ENDPOINT=
 
 # --- qiniu storage config ---
-#IMAGES|VIDEOS|FILES_STORAGE=qiniu
-#IMAGES|VIDEOS|FILES_QINIU_ACCESS_KEY=**********
-#IMAGES|VIDEOS|FILES_QINIU_SECRET_KEY=**********
-#IMAGES|VIDEOS|FILES_QINIU_BUCKET_NAME=test-bucket
-#IMAGES|VIDEOS|FILES_QINIU_PREFIX=/uploads/images
-#IMAGES|VIDEOS|FILES_QINIU_DOMAIN=http://www.example.com
+#DEFAULT_STORAGE=qiniu
+#DEFAULT_QINIU_ACCESS_KEY=**********
+#DEFAULT_QINIU_SECRET_KEY=**********
+#DEFAULT_QINIU_BUCKET_NAME=test-bucket
+#DEFAULT_QINIU_PREFIX=/uploads/images
+#DEFAULT_QINIU_DOMAIN=http://www.example.com
+
+#IMAGES|VIDEOS|FILES|[ANY]_STORAGE=qiniu
+#IMAGES|VIDEOS|FILES|[ANY]_QINIU_ACCESS_KEY=**********
+#IMAGES|VIDEOS|FILES|[ANY]_QINIU_SECRET_KEY=**********
+#IMAGES|VIDEOS|FILES|[ANY]_QINIU_BUCKET_NAME=test-bucket
+#IMAGES|VIDEOS|FILES|[ANY]_QINIU_PREFIX=/uploads/images
+#IMAGES|VIDEOS|FILES|[ANY]_QINIU_DOMAIN=https://www.example.com
 
 # --- local storage config ---
 #IMAGES|VIDEOS|FILES|CHUNKS_STORAGE=local|minio|qiniu
 
 UPLOADER_ENABLE=true
-IMAGES_STORAGE=
-VIDEOS_STORAGE=
-FILES_STORAGE=
-CHUNKS_STORAGE=
+DEFAULT_STORAGE=local
+#IMAGES|[ANY]_STORAGE=
+#VIDEOS|[ANY]_STORAGE=
+#FILES|[ANY]_STORAGE=
+#CHUNKS|[ANY]_STORAGE=
 
 # --- minio storage config ---
 # true or false
