--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nestjs/platform-socket.io": "^6.11.6",
     "@nestjs/platform-ws": "^6.11.6",
     "@nestjs/swagger": "^4.2.6",
-    "@nestjs/terminus": "^6.5.5",
+    "@nestjs/terminus": "^6.5.6",
     "@nestjs/typeorm": "^6.2.0",
     "@nestjs/websockets": "^6.11.6",
     "accesscontrol": "^2.2.1",
@@ -129,13 +129,14 @@
     "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-typescript": "^6.3.1",
+    "eslint-config-airbnb-typescript": "^7.0.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-formatter-pretty": "^3.0.1",
     "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jest": "^23.7.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-unicorn": "^16.0.0",
     "husky": "^4.2.1",
