refactor: uploader controller

--- a/.env.example
+++ b/.env.example
@@ -104,11 +104,11 @@ ASSETS_INTERNAL_ENDPOINT=
 
 # --- qiniu storage config ---
 #DEFAULT_STORAGE=qiniu
-#DEFAULT_QINIU_ACCESS_KEY=**********
-#DEFAULT_QINIU_SECRET_KEY=**********
-#DEFAULT_QINIU_BUCKET_NAME=test-bucket
-#DEFAULT_QINIU_PREFIX=/uploads/images
-#DEFAULT_QINIU_DOMAIN=http://www.example.com
+#QINIU_ACCESS_KEY=**********
+#QINIU_SECRET_KEY=**********
+#QINIU_BUCKET_NAME=test-bucket
+#QINIU_PREFIX=/uploads/images
+#QINIU_DOMAIN=http://www.example.com
 
 #IMAGES|VIDEOS|FILES|[ANY]_STORAGE=qiniu
 #IMAGES|VIDEOS|FILES|[ANY]_QINIU_ACCESS_KEY=**********
