--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "@nestjs/typeorm": "^6.2.0",
     "@nestjs/websockets": "^6.11.6",
     "accesscontrol": "^2.2.1",
+    "apollo-server-cache-redis": "^1.1.5",
+    "apollo-server-caching": "^0.5.1",
     "apollo-server-express": "^2.10.0",
+    "apollo-server-plugin-response-cache": "^0.3.11",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bull": "^3.12.1",
