refactor: export graphql debug config

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,8 @@ SYS_ADMIN_EMAIL=admin@example.com
 SYS_ADMIN_PASSWORD=
 
 # default: false
+GRAPHQL_DEBUG=
+# default: false
 GRAPHQL_PLAYGROUND_ENABLE=
 
 FIX_TZ=
