--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
     "cron": "^1.8.2",
+    "cron-parser": "^2.13.0",
     "dataloader": "^2.0.0",
     "date-fns": "^2.9.0",
     "dayjs": "^1.8.20",
