refactor: add trace module

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,11 @@ GRAPHQL_PLAYGROUND_ENABLE=
 
 FIX_TZ=
 
+# -- jaeger --
+JAEGER_DISABLED=true
+JAEGER_SERVICE_NAME=my-service
+JAEGER_ENDPOINT=http://localhost:14268/api/traces
+
 # --- mq ---
 # default: false
 MQ_ENABLE=false
