--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@godaddy/terminus": "^4.3.1",
+    "@nestjs/bull": "^0.0.2",
     "@nestjs/common": "^6.11.6",
     "@nestjs/core": "^6.11.6",
     "@nestjs/cqrs": "^6.1.0",
@@ -27,6 +28,7 @@
     "@nestjs/platform-express": "^6.11.6",
     "@nestjs/platform-socket.io": "^6.11.6",
     "@nestjs/platform-ws": "^6.11.6",
+    "@nestjs/schedule": "^0.2.0",
     "@nestjs/swagger": "^4.2.7",
     "@nestjs/terminus": "^6.5.6",
     "@nestjs/typeorm": "^6.3.1",
@@ -60,6 +62,7 @@
     "hbs": "^4.1.0",
     "helmet": "^3.21.2",
     "highland": "^3.0.0-beta.10",
+    "jaeger-client": "^3.17.2",
     "jsondiffpatch": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
@@ -72,6 +75,7 @@
     "node-buffs": "^0.6.22",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.2",
+    "opentracing": "^0.14.4",
     "otplib": "^12.0.1",
     "ow": "^0.15.1",
     "passport": "^0.4.1",
@@ -109,6 +113,7 @@
     "@types/fs-extra": "^8.0.1",
     "@types/helmet": "^0.0.45",
     "@types/highland": "^2.12.9",
+    "@types/jaeger-client": "^3.15.3",
     "@types/jest": "^25.1.2",
     "@types/lodash": "^4.14.149",
     "@types/lru-cache": "^5.1.0",
