refactor: set JAEGER_DISABLED to true for default

--- a/.env.example
+++ b/.env.example
@@ -80,7 +80,8 @@ TYPEORM_SYNCHRONIZE=false
 #TYPEORM_DEBUG=true
 # error | true
 TYPEORM_LOGGING=error
-# advanced-console | ...
+# https://github.com/typeorm/typeorm/blob/master/docs/logging.md
+# advanced-console | simple-console | file | debug
 TYPEORM_LOGGER=advanced-console
 
 TYPEORM_CONNECTION=mysql
