refactor: add sentry support

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,10 @@ GRAPHQL_PLAYGROUND_ENABLE=
 CRON_ENABLE=
 FIX_TZ=
 
+# -- sentry --
+SENTRY_ENABLE=
+SENTRY_DSN=
+
 # -- jaeger --
 JAEGER_DISABLED=true
 JAEGER_SERVICE_NAME=my-service
