--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/terminus": "^6.5.6",
     "@nestjs/typeorm": "^6.3.1",
     "@nestjs/websockets": "^6.11.6",
+    "@sentry/node": "^5.12.3",
     "accesscontrol": "^2.2.1",
     "apollo-server-cache-redis": "^1.1.5",
     "apollo-server-caching": "^0.5.1",
