--- a/.env.example
+++ b/.env.example
@@ -42,7 +42,7 @@ SENTRY_ENABLE=
 SENTRY_DSN=
 
 # -- jaeger --
-JAEGER_DISABLED=true
+JAEGER_ENABLED=false
 JAEGER_SERVICE_NAME=my-service
 JAEGER_ENDPOINT=http://localhost:14268/api/traces
 
