--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/websockets": "^6.11.7",
     "@sentry/node": "^5.12.3",
     "accesscontrol": "^2.2.1",
+    "apollo-opentracing": "^1.4.2",
     "apollo-server-cache-redis": "^1.1.5",
     "apollo-server-caching": "^0.5.1",
     "apollo-server-express": "^2.10.0",
