--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bull": "^3.12.1",
+    "cache-manager": "^2.11.1",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "cli-color": "^2.0.0",
