--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "swagger-ui-express": "^4.1.3",
     "typeorm": "^0.2.22",
     "validator": "^12.2.0",
+    "winston": "^3.2.1",
     "wx-server-sdk": "^1.8.2",
     "xlsx": "^0.15.5",
     "xml2js": "^0.4.23"
