feat: add payment module

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "pump": "^3.0.0",
     "qiniu": "^7.3.0",
     "qrcode": "^1.4.4",
+    "qs": "^6.9.1",
     "ramda": "^0.27.0",
     "redlock": "^4.1.0",
     "response-time": "^2.3.2",
@@ -131,6 +132,7 @@
     "@types/passport": "^1.0.2",
     "@types/passport-jwt": "^3.0.3",
     "@types/pump": "^1.1.0",
+    "@types/qs": "^6.9.1",
     "@types/redis": "^2.8.16",
     "@types/redlock": "^4.0.1",
     "@types/response-time": "^2.3.4",
