--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@nestjs/common": "^7.0.3",
     "@nestjs/core": "^7.0.3",
     "@nestjs/cqrs": "^6.1.0",
-    "@nestjs/graphql": "^7.0.6",
+    "@nestjs/graphql": "^7.0.10",
     "@nestjs/jwt": "^7.0.0",
+    "@nestjs/mongoose": "^6.4.0",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.3",
     "@nestjs/platform-socket.io": "^7.0.3",
@@ -33,7 +34,7 @@
     "@nestjs/terminus": "^6.5.6",
     "@nestjs/typeorm": "^7.0.0",
     "@nestjs/websockets": "^7.0.3",
-    "@sentry/node": "^5.14.2",
+    "@sentry/node": "^5.15.0",
     "accesscontrol": "^2.2.1",
     "apollo-opentracing": "^1.4.2",
     "apollo-server-cache-redis": "^1.1.5",
@@ -43,10 +44,10 @@
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bull": "^3.13.0",
-    "cache-manager": "^3.2.0",
+    "cache-manager": "^3.2.1",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.2.3",
-    "class-validator": "^0.11.0",
+    "class-validator": "^0.11.1",
     "cli-color": "^2.0.0",
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
@@ -59,7 +60,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.1",
     "file-type": "^14.1.4",
-    "fs-extra": "^8.1.0",
+    "fs-extra": "^9.0.0",
     "graphql": "^14.6.0",
     "graphql-type-json": "^0.3.1",
     "hashids": "^2.2.1",
@@ -74,11 +75,13 @@
     "luxon": "^1.22.0",
     "mime-types": "^2.1.26",
     "minio": "^7.0.15",
-    "morgan": "^1.9.1",
+    "mongoose": "^5.9.5",
+    "mongoose-autopopulate": "^0.12.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-buffs": "^0.8.1",
     "node-fetch": "^2.6.0",
-    "nodemailer": "^6.4.5",
+    "nodemailer": "^6.4.6",
     "opentracing": "^0.14.4",
     "otplib": "^12.0.1",
     "ow": "^0.17.0",
@@ -92,13 +95,13 @@
     "redlock": "^4.1.0",
     "response-time": "^2.3.2",
     "rxjs": "^6.5.4",
-    "sharp": "^0.25.1",
+    "sharp": "^0.25.2",
     "shortid": "^2.2.15",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.2.0",
     "swagger-ui-express": "^4.1.3",
     "typeorm": "^0.2.24",
-    "validator": "^12.2.0",
+    "validator": "^13.0.0",
     "winston": "^3.2.1",
     "wx-server-sdk": "^1.8.2",
     "xlsx": "^0.15.6",
@@ -140,7 +143,7 @@
     "@types/shortid": "^0.0.29",
     "@types/socket.io": "^2.1.4",
     "@types/supertest": "^2.0.8",
-    "@types/uuid": "^7.0.0",
+    "@types/uuid": "^7.0.2",
     "@types/wx-server-sdk": "^0.8.0",
     "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
@@ -163,7 +166,7 @@
     "sqlite3": "^4.1.1",
     "supertest": "^4.0.2",
     "ts-jest": "^25.2.1",
-    "ts-node": "^8.6.2",
+    "ts-node": "^8.7.0",
     "typescript": "^3.8.3"
   },
   "husky": {
