--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@nestjs/common": "^7.0.5",
     "@nestjs/core": "^7.0.5",
     "@nestjs/cqrs": "^6.1.0",
-    "@nestjs/graphql": "^7.0.14",
+    "@nestjs/graphql": "^7.0.15",
     "@nestjs/jwt": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/passport": "^7.0.0",
@@ -65,7 +65,7 @@
     "graphql-type-json": "^0.3.1",
     "hashids": "^2.2.1",
     "hbs": "^4.1.0",
-    "helmet": "^3.21.3",
+    "helmet": "^3.22.0",
     "highland": "^3.0.0-beta.10",
     "jaeger-client": "^3.17.2",
     "jsondiffpatch": "^0.4.1",
@@ -75,7 +75,7 @@
     "luxon": "^1.22.0",
     "mime-types": "^2.1.26",
     "minio": "^7.0.15",
-    "mongoose": "^5.9.5",
+    "mongoose": "^5.9.6",
     "mongoose-autopopulate": "^0.12.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
@@ -92,6 +92,7 @@
     "qrcode": "^1.4.4",
     "qs": "^6.9.2",
     "ramda": "^0.27.0",
+    "redis": "^3.0.2",
     "redlock": "^4.1.0",
     "response-time": "^2.3.2",
     "rxjs": "^6.5.4",
@@ -146,7 +147,7 @@
     "@types/uuid": "^7.0.2",
     "@types/wx-server-sdk": "^0.8.0",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^7.2.0",
     "eslint-config-prettier": "^6.10.1",
@@ -161,7 +162,7 @@
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
-    "prettier": "^2.0.1",
+    "prettier": "^2.0.2",
     "pretty-quick": "^2.0.1",
     "sqlite3": "^4.1.1",
     "supertest": "^4.0.2",
