refactor: email sender

--- a/.env.base
+++ b/.env.base
@@ -156,12 +156,13 @@ MINIO_USE_SSL=false
 #MINIO_SECRET_KEY=
 
 # --- mail ---
-MAIL_HOST=
-MAIL_PORT=465
-MAIL_SSL=false
-MAIL_USERNAME=
-MAIL_PASSWORD=
-MAIL_FROM=
+EMAIL_ENABLE=false
+EMAIL_HOST=
+EMAIL_PORT=465
+EMAIL_SSL=false
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
+EMAIL_FROM=
 
 # --------------------------------------------------------------
 # Customize
