--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@nestjs/common": "^7.0.7",
     "@nestjs/core": "^7.0.7",
     "@nestjs/cqrs": "^6.1.0",
-    "@nestjs/graphql": "^7.1.4",
+    "@nestjs/graphql": "^7.1.5",
     "@nestjs/jwt": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/passport": "^7.0.0",
@@ -75,11 +75,11 @@
     "luxon": "^1.22.2",
     "mime-types": "^2.1.26",
     "minio": "^7.0.15",
-    "mongoose": "^5.9.6",
+    "mongoose": "^5.9.7",
     "mongoose-autopopulate": "^0.12.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "node-buffs": "^0.8.1",
+    "node-buffs": "^0.8.3-1",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.6",
     "opentracing": "^0.14.4",
@@ -117,8 +117,8 @@
     "@types/common-tags": "^1.8.0",
     "@types/compression": "^1.7.0",
     "@types/cron": "^1.7.2",
-    "@types/email-templates": "^6.0.2",
-    "@types/express": "^4.17.3",
+    "@types/email-templates": "^6.0.3",
+    "@types/express": "^4.17.4",
     "@types/express-rate-limit": "^5.0.0",
     "@types/fs-extra": "^8.1.0",
     "@types/helmet": "^0.0.45",
@@ -147,7 +147,7 @@
     "@types/uuid": "^7.0.2",
     "@types/wx-server-sdk": "^0.8.0",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^7.2.0",
     "eslint-config-prettier": "^6.10.1",
@@ -160,7 +160,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-unicorn": "^18.0.1",
     "husky": "^4.2.3",
-    "jest": "^25.2.4",
+    "jest": "^25.2.6",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
     "pretty-quick": "^2.0.1",
