--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.2.0",
     "swagger-ui-express": "^4.1.4",
+    "tmp": "^0.1.0",
     "typeorm": "^0.2.24",
     "validator": "^13.0.0",
     "winston": "^3.2.1",
