--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@nestjs/common": "^7.0.7",
     "@nestjs/core": "^7.0.7",
     "@nestjs/cqrs": "^6.1.0",
-    "@nestjs/graphql": "^7.2.0",
+    "@nestjs/graphql": "^7.2.1",
     "@nestjs/jwt": "^7.0.0",
     "@nestjs/mongoose": "^6.4.0",
     "@nestjs/passport": "^7.0.0",
@@ -31,11 +31,12 @@
     "@nestjs/platform-ws": "^7.0.7",
     "@nestjs/schedule": "^0.3.0",
     "@nestjs/swagger": "^4.5.1",
-    "@nestjs/terminus": "^6.5.6",
+    "@nestjs/terminus": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
     "@nestjs/websockets": "^7.0.7",
     "@sentry/node": "^5.15.4",
     "accesscontrol": "^2.2.1",
+    "amqplib": "^0.5.5",
     "apollo-opentracing": "^1.4.2",
     "apollo-server-cache-redis": "^1.1.5",
     "apollo-server-caching": "^0.5.1",
