--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "mongoose-autopopulate": "^0.12.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "node-buffs": "^0.8.3-1",
+    "node-buffs": "^0.8.3",
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.6",
     "opentracing": "^0.14.4",
@@ -164,7 +164,7 @@
     "husky": "^4.2.3",
     "jest": "^25.2.7",
     "nodemon": "^2.0.2",
-    "prettier": "^2.0.2",
+    "prettier": "^2.0.3",
     "pretty-quick": "^2.0.1",
     "sqlite3": "^4.1.1",
     "supertest": "^4.0.2",
