--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
     "@nestjs/platform-ws": "^7.0.7",
     "@nestjs/schedule": "^0.3.0",
     "@nestjs/swagger": "^4.5.1",
-    "@nestjs/terminus": "^7.0.0",
+    "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.0.0",
     "@nestjs/websockets": "^7.0.7",
     "@sentry/node": "^5.15.4",
     "accesscontrol": "^2.2.1",
     "amqplib": "^0.5.5",
     "apollo-opentracing": "^1.4.2",
-    "apollo-server-cache-redis": "^1.1.5",
+    "apollo-server-cache-redis": "^1.1.6",
     "apollo-server-caching": "^0.5.1",
-    "apollo-server-express": "^2.11.0",
-    "apollo-server-plugin-response-cache": "^0.4.0",
+    "apollo-server-express": "^2.12.0",
+    "apollo-server-plugin-response-cache": "^0.4.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "bull": "^3.13.0",
@@ -55,8 +55,8 @@
     "cron": "^1.8.2",
     "cron-parser": "^2.13.0",
     "dataloader": "^2.0.0",
-    "date-fns": "^2.11.1",
-    "dayjs": "^1.8.23",
+    "date-fns": "^2.12.0",
+    "dayjs": "^1.8.24",
     "email-templates": "^7.0.4",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.1",
@@ -114,13 +114,13 @@
     "@nestjs/testing": "^7.0.7",
     "@types/amqplib": "^0.5.13",
     "@types/bluebird": "^3.5.30",
-    "@types/bull": "^3.12.1",
+    "@types/bull": "^3.12.2",
     "@types/cli-color": "^2.0.0",
     "@types/common-tags": "^1.8.0",
     "@types/compression": "^1.7.0",
     "@types/cron": "^1.7.2",
     "@types/email-templates": "^6.0.3",
-    "@types/express": "^4.17.4",
+    "@types/express": "4.17.4",
     "@types/express-rate-limit": "^5.0.0",
     "@types/fs-extra": "^8.1.0",
     "@types/helmet": "^0.0.45",
@@ -134,7 +134,7 @@
     "@types/minio": "^7.0.5",
     "@types/morgan": "^1.9.0",
     "@types/multer": "^1.4.2",
-    "@types/node-fetch": "^2.5.5",
+    "@types/node-fetch": "^2.5.6",
     "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
     "@types/pump": "^1.1.0",
@@ -151,7 +151,7 @@
     "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-typescript": "^7.2.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
     "eslint-config-prettier": "^6.10.1",
     "eslint-formatter-pretty": "^3.0.1",
     "eslint-plugin-eslint-comments": "^3.1.2",
@@ -161,9 +161,9 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-unicorn": "^18.0.1",
-    "husky": "^4.2.3",
-    "jest": "^25.2.7",
-    "nodemon": "^2.0.2",
+    "husky": "^4.2.5",
+    "jest": "^25.3.0",
+    "nodemon": "^2.0.3",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "sqlite3": "^4.1.1",
