--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/websockets": "^7.0.11",
     "@sentry/node": "^5.15.5",
     "accesscontrol": "^2.2.1",
+    "alipay-sdk": "^3.0.8",
     "amqplib": "^0.5.6",
     "apollo-opentracing": "^1.4.2",
     "apollo-server-cache-redis": "^1.2.0",
