feat: add rookout

--- a/package.json
+++ b/package.json
@@ -20,21 +20,21 @@
   },
   "dependencies": {
     "@nestjs/bull": "^0.1.1",
-    "@nestjs/common": "^7.1.0",
-    "@nestjs/core": "^7.1.0",
+    "@nestjs/common": "^7.1.1",
+    "@nestjs/core": "^7.1.1",
     "@nestjs/cqrs": "^7.0.0",
-    "@nestjs/graphql": "^7.3.11",
+    "@nestjs/graphql": "^7.4.0",
     "@nestjs/jwt": "^7.0.0",
     "@nestjs/mongoose": "^7.0.1",
     "@nestjs/passport": "^7.0.0",
-    "@nestjs/platform-express": "^7.1.0",
-    "@nestjs/platform-socket.io": "^7.1.0",
-    "@nestjs/platform-ws": "^7.1.0",
+    "@nestjs/platform-express": "^7.1.1",
+    "@nestjs/platform-socket.io": "^7.1.1",
+    "@nestjs/platform-ws": "^7.1.1",
     "@nestjs/schedule": "^0.4.0",
-    "@nestjs/swagger": "^4.5.8",
+    "@nestjs/swagger": "^4.5.9",
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.0",
-    "@nestjs/websockets": "^7.1.0",
+    "@nestjs/websockets": "^7.1.1",
     "@sentry/node": "^5.15.5",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.1",
@@ -42,7 +42,7 @@
     "apollo-opentracing": "^1.4.2",
     "apollo-server-cache-redis": "^1.2.1",
     "apollo-server-caching": "^0.5.1",
-    "apollo-server-express": "^2.14.0",
+    "apollo-server-express": "^2.14.1",
     "apollo-server-plugin-response-cache": "^0.5.2",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
@@ -85,7 +85,7 @@
     "multer": "^1.4.2",
     "node-buffs": "^0.8.4",
     "node-fetch": "^2.6.0",
-    "nodemailer": "^6.4.6",
+    "nodemailer": "^6.4.8",
     "opentracing": "^0.14.4",
     "otplib": "^12.0.1",
     "ow": "^0.17.0",
@@ -99,10 +99,11 @@
     "redis": "^3.0.2",
     "redlock": "^4.1.0",
     "response-time": "^2.3.2",
+    "rookout": "^0.1.91",
     "rxjs": "^6.5.5",
     "sharp": "^0.25.3",
     "shortid": "^2.2.15",
-    "snyk": "^1.330.2",
+    "snyk": "^1.332.1",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.2.0",
     "swagger-ui-express": "^4.1.4",
@@ -114,7 +115,7 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@nestjs/testing": "^7.1.0",
+    "@nestjs/testing": "^7.1.1",
     "@types/amqplib": "^0.5.13",
     "@types/bluebird": "^3.5.32",
     "@types/bull": "^3.13.0",
@@ -130,7 +131,7 @@
     "@types/highland": "^2.12.10",
     "@types/jaeger-client": "^3.15.4",
     "@types/jest": "^25.2.3",
-    "@types/lodash": "^4.14.153",
+    "@types/lodash": "^4.14.154",
     "@types/lru-cache": "^5.1.0",
     "@types/luxon": "^1.24.0",
     "@types/mime-types": "^2.1.0",
@@ -142,7 +143,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/pump": "^1.1.0",
     "@types/qs": "^6.9.3",
-    "@types/redis": "^2.8.21",
+    "@types/redis": "^2.8.22",
     "@types/redlock": "^4.0.1",
     "@types/response-time": "^2.3.4",
     "@types/sharp": "^0.25.0",
@@ -170,8 +171,8 @@
     "pretty-quick": "^2.0.1",
     "sqlite3": "^4.2.0",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.0.0",
-    "ts-node": "^8.10.1",
+    "ts-jest": "^26.1.0",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
   },
   "husky": {
