--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "@types/minio": "^7.0.5",
     "@types/morgan": "^1.9.0",
     "@types/multer": "^1.4.3",
+    "@types/node": "^12.12.45",
     "@types/node-fetch": "^2.5.7",
     "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
