--- a/package.json
+++ b/package.json
@@ -31,18 +31,18 @@
     "@nestjs/platform-socket.io": "^7.1.3",
     "@nestjs/platform-ws": "^7.1.3",
     "@nestjs/schedule": "^0.4.0",
-    "@nestjs/swagger": "^4.5.9",
+    "@nestjs/swagger": "^4.5.10",
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.0",
     "@nestjs/websockets": "^7.1.3",
-    "@sentry/node": "^5.16.1",
+    "@sentry/node": "^5.17.0",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.1",
     "amqplib": "^0.5.6",
     "apollo-opentracing": "^1.4.3",
     "apollo-server-cache-redis": "^1.2.1",
     "apollo-server-caching": "^0.5.1",
-    "apollo-server-express": "^2.14.2",
+    "apollo-server-express": "^2.14.3",
     "apollo-server-plugin-response-cache": "^0.5.2",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
@@ -66,7 +66,7 @@
     "file-type": "^14.6.1",
     "fs-extra": "^9.0.1",
     "graphql": "^15.1.0",
-    "graphql-type-json": "^0.3.1",
+    "graphql-type-json": "^0.3.2",
     "hashids": "^2.2.1",
     "hbs": "^4.1.1",
     "helmet": "^3.22.0",
@@ -103,7 +103,7 @@
     "rxjs": "^6.5.5",
     "sharp": "^0.25.3",
     "shortid": "^2.2.15",
-    "snyk": "^1.336.0",
+    "snyk": "^1.338.0",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.3.0",
     "swagger-ui-express": "^4.1.4",
@@ -118,7 +118,7 @@
     "@nestjs/testing": "^7.1.3",
     "@types/amqplib": "^0.5.13",
     "@types/bluebird": "^3.5.32",
-    "@types/bull": "^3.13.0",
+    "@types/bull": "^3.14.0",
     "@types/cli-color": "^2.0.0",
     "@types/common-tags": "^1.8.0",
     "@types/compression": "^1.7.0",
@@ -130,7 +130,7 @@
     "@types/helmet": "^0.0.47",
     "@types/highland": "^2.12.10",
     "@types/jaeger-client": "^3.15.4",
-    "@types/jest": "^25.2.3",
+    "@types/jest": "^26.0.0",
     "@types/lodash": "^4.14.155",
     "@types/lru-cache": "^5.1.0",
     "@types/luxon": "^1.24.0",
@@ -138,7 +138,7 @@
     "@types/minio": "^7.0.5",
     "@types/morgan": "^1.9.0",
     "@types/multer": "^1.4.3",
-    "@types/node": "^12.12.45",
+    "@types/node": "~12.12.45",
     "@types/node-fetch": "^2.5.7",
     "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
@@ -153,13 +153,13 @@
     "@types/supertest": "^2.0.9",
     "@types/uuid": "^8.0.0",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-typescript": "^8.0.2",
     "eslint-config-prettier": "^6.11.0",
     "eslint-formatter-pretty": "^3.0.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.21.1",
+    "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-jest": "^23.13.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
