--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "ramda": "^0.27.0",
     "redis": "^3.0.2",
     "redlock": "^4.1.0",
+    "request-ip": "^2.1.3",
     "response-time": "^2.3.2",
     "rookout": "^0.1.92",
     "rxjs": "^6.5.5",
@@ -146,6 +147,7 @@
     "@types/qs": "^6.9.3",
     "@types/redis": "^2.8.22",
     "@types/redlock": "^4.0.1",
+    "@types/request-ip": "^0.0.35",
     "@types/response-time": "^2.3.4",
     "@types/sharp": "^0.25.0",
     "@types/shortid": "^0.0.29",
