--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.0",
     "@nestjs/websockets": "^7.3.2",
-    "@sentry/node": "^5.19.2",
+    "@sentry/node": "^5.20.1",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.1",
     "amqplib": "^0.6.0",
@@ -59,7 +59,7 @@
     "cron-parser": "^2.15.0",
     "dataloader": "^2.0.0",
     "date-fns": "^2.15.0",
-    "dayjs": "^1.8.29",
+    "dayjs": "^1.8.30",
     "email-templates": "^7.1.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
@@ -129,15 +129,15 @@
     "@types/helmet": "^0.0.47",
     "@types/highland": "^2.12.10",
     "@types/jaeger-client": "^3.15.4",
-    "@types/jest": "^26.0.5",
-    "@types/lodash": "^4.14.157",
+    "@types/jest": "^26.0.7",
+    "@types/lodash": "^4.14.158",
     "@types/lru-cache": "^5.1.0",
-    "@types/luxon": "^1.24.1",
+    "@types/luxon": "^1.24.3",
     "@types/mime-types": "^2.1.0",
     "@types/minio": "^7.0.6",
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.3",
-    "@types/node": "~12.12.50",
+    "@types/node": "^12.12.50",
     "@types/node-fetch": "^2.5.7",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
@@ -147,13 +147,13 @@
     "@types/redlock": "^4.0.1",
     "@types/request-ip": "^0.0.35",
     "@types/response-time": "^2.3.4",
-    "@types/sharp": "^0.25.0",
+    "@types/sharp": "^0.25.1",
     "@types/shortid": "^0.0.29",
-    "@types/socket.io": "^2.1.8",
+    "@types/socket.io": "^2.1.10",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.0.0",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
     "eslint": "^7.5.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
@@ -170,7 +170,7 @@
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
-    "snyk": "^1.362.1",
+    "snyk": "^1.366.1",
     "sqlite3": "^4.2.0",
     "supertest": "^4.0.2",
     "ts-jest": "^26.1.3",
