--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "express-rate-limit": "^5.1.3",
     "file-type": "^14.7.0",
     "fs-extra": "^9.0.1",
+    "futil": "^1.67.0",
     "graphql": "^15.3.0",
     "graphql-type-json": "^0.3.2",
     "hashids": "^2.2.1",
