--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "asuna-node-server",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
   "types": "declaration/index.d.ts",
@@ -11,7 +11,7 @@
     "dev": "ts-node --transpile-only src/dev.ts",
     "dev:watch": "nodemon --exec ts-node --transpile-only src/dev.ts",
     "prebuild": "yarn clean",
-    "postinstall": "yarn build",
+    "postinstall!": "yarn build",
     "test": "ENV=test jest",
     "test:cov": "ENV=test jest --coverage --no-cache",
     "check:circular": "npx madge --circular --extensions ts ./",
@@ -104,6 +104,7 @@
     "rxjs": "^6.6.2",
     "sharp": "^0.25.4",
     "shortid": "^2.2.15",
+    "snyk": "^1.382.0",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.3.0",
     "swagger-ui-express": "^4.1.4",
@@ -112,8 +113,7 @@
     "validator": "^13.1.1",
     "winston": "^3.3.3",
     "xlsx": "^0.16.6",
-    "xml2js": "^0.4.23",
-    "snyk": "^1.382.0"
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@nestjs/testing": "^7.4.2",
