--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "asuna-node-server",
-  "version": "0.6.0",
+  "version": "0.6.4-1",
   "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
-  "types": "dist/index.d.ts",
   "scripts": {
     "clean": "rm -rf ./dist && rm -rf ./declaration",
     "tsc": "tsc",
