--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "asuna-node-server",
-  "version": "0.6.4-1",
+  "version": "0.6.5-1",
   "repository": "git@github.com:danielwii/asuna-node-server.git",
   "author": "Daniel Wei <danielwii0326@gmail.com>",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src",
+    ".appenv.base.yml",
+    ".env.base"
+  ],
   "scripts": {
     "clean": "rm -rf ./dist && rm -rf ./declaration",
     "tsc": "tsc",
