--- a/package.json
+++ b/package.json
@@ -26,30 +26,31 @@
     "prepare": "yarn run snyk-protect"
   },
   "dependencies": {
+    "@alicloud/pop-core": "^1.7.9",
     "@nestjs/bull": "^0.1.2",
-    "@nestjs/common": "^7.4.2",
-    "@nestjs/core": "^7.4.2",
+    "@nestjs/common": "^7.4.3",
+    "@nestjs/core": "^7.4.3",
     "@nestjs/cqrs": "^7.0.1",
     "@nestjs/graphql": "^7.6.0",
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.4.2",
-    "@nestjs/platform-socket.io": "^7.4.2",
-    "@nestjs/platform-ws": "^7.4.2",
+    "@nestjs/platform-express": "^7.4.3",
+    "@nestjs/platform-socket.io": "^7.4.3",
+    "@nestjs/platform-ws": "^7.4.3",
     "@nestjs/schedule": "^0.4.0",
     "@nestjs/swagger": "^4.6.0",
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.1",
-    "@nestjs/websockets": "^7.4.2",
-    "@sentry/node": "^5.22.0",
+    "@nestjs/websockets": "^7.4.3",
+    "@sentry/node": "^5.22.3",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.2",
     "amqplib": "^0.6.0",
     "apollo-opentracing": "^1.5.0",
     "apollo-server-cache-redis": "^1.2.2",
     "apollo-server-caching": "^0.5.2",
-    "apollo-server-express": "^2.16.1",
+    "apollo-server-express": "^2.17.0",
     "apollo-server-plugin-response-cache": "^0.5.3",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
@@ -62,6 +63,7 @@
     "cli-color": "^2.0.0",
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "cron": "^1.8.2",
     "cron-parser": "^2.16.3",
     "dataloader": "^2.0.0",
@@ -70,6 +72,7 @@
     "email-templates": "^7.1.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
+    "express-session": "^1.17.1",
     "file-type": "^15.0.0",
     "fs-extra": "^9.0.1",
     "futil": "^1.67.0",
@@ -87,7 +90,7 @@
     "luxon": "^1.25.0",
     "mime-types": "^2.1.27",
     "minio": "^7.0.16",
-    "mongoose": "^5.10.1",
+    "mongoose": "^5.10.2",
     "mongoose-autopopulate": "^0.12.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
@@ -111,7 +114,7 @@
     "rxjs": "^6.6.2",
     "sharp": "^0.26.0",
     "shortid": "^2.2.15",
-    "snyk": "^1.385.0",
+    "snyk": "^1.386.0",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.3.0",
     "swagger-ui-express": "^4.1.4",
@@ -123,7 +126,7 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@nestjs/testing": "^7.4.2",
+    "@nestjs/testing": "^7.4.3",
     "@types/amqplib": "^0.5.13",
     "@types/bluebird": "^3.5.32",
     "@types/bull": "^3.14.2",
@@ -139,7 +142,7 @@
     "@types/highland": "^2.12.10",
     "@types/jaeger-client": "^3.15.4",
     "@types/jest": "^26.0.10",
-    "@types/lodash": "^4.14.160",
+    "@types/lodash": "^4.14.161",
     "@types/lru-cache": "^5.1.0",
     "@types/luxon": "^1.24.4",
     "@types/mime-types": "^2.1.0",
