--- a/package.json
+++ b/package.json
@@ -28,21 +28,21 @@
   "dependencies": {
     "@alicloud/pop-core": "^1.7.9",
     "@nestjs/bull": "^0.1.2",
-    "@nestjs/common": "^7.4.3",
-    "@nestjs/core": "^7.4.3",
+    "@nestjs/common": "^7.4.4",
+    "@nestjs/core": "^7.4.4",
     "@nestjs/cqrs": "^7.0.1",
     "@nestjs/graphql": "^7.6.0",
     "@nestjs/jwt": "^7.1.0",
     "@nestjs/mongoose": "^7.0.2",
     "@nestjs/passport": "^7.1.0",
-    "@nestjs/platform-express": "^7.4.3",
-    "@nestjs/platform-socket.io": "^7.4.3",
-    "@nestjs/platform-ws": "^7.4.3",
+    "@nestjs/platform-express": "^7.4.4",
+    "@nestjs/platform-socket.io": "^7.4.4",
+    "@nestjs/platform-ws": "^7.4.4",
     "@nestjs/schedule": "^0.4.0",
     "@nestjs/swagger": "^4.6.0",
     "@nestjs/terminus": "^7.0.1",
-    "@nestjs/typeorm": "^7.1.1",
-    "@nestjs/websockets": "^7.4.3",
+    "@nestjs/typeorm": "^7.1.3",
+    "@nestjs/websockets": "^7.4.4",
     "@sentry/node": "^5.22.3",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.2",
@@ -67,7 +67,7 @@
     "cron": "^1.8.2",
     "cron-parser": "^2.16.3",
     "dataloader": "^2.0.0",
-    "date-fns": "^2.16.0",
+    "date-fns": "^2.16.1",
     "dayjs": "^1.8.34",
     "email-templates": "^7.1.0",
     "express": "^4.17.1",
@@ -90,6 +90,7 @@
     "luxon": "^1.25.0",
     "mime-types": "^2.1.27",
     "minio": "^7.0.16",
+    "mongoose": "^5.10.2",
     "mongoose-autopopulate": "^0.12.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
@@ -113,7 +114,7 @@
     "rxjs": "^6.6.2",
     "sharp": "^0.26.0",
     "shortid": "^2.2.15",
-    "snyk": "^1.386.0",
+    "snyk": "^1.387.0",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.3.0",
     "swagger-ui-express": "^4.1.4",
@@ -125,7 +126,7 @@
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
-    "@nestjs/testing": "^7.4.3",
+    "@nestjs/testing": "^7.4.4",
     "@types/amqplib": "^0.5.13",
     "@types/bluebird": "^3.5.32",
     "@types/bull": "^3.14.2",
@@ -140,7 +141,7 @@
     "@types/helmet": "^0.0.48",
     "@types/highland": "^2.12.10",
     "@types/jaeger-client": "^3.15.4",
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^26.0.12",
     "@types/lodash": "^4.14.161",
     "@types/lru-cache": "^5.1.0",
     "@types/luxon": "^1.24.4",
@@ -164,8 +165,8 @@
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "eslint": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "eslint": "^7.8.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-formatter-pretty": "^4.0.0",
