--- a/package.json
+++ b/package.json
@@ -166,17 +166,9 @@
     "@types/uuid": "^8.3.0",
     "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "eslint": "^7.8.0",
-    "eslint-config-airbnb-typescript": "^9.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-formatter-pretty": "^4.0.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^23.20.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-unicorn": "^21.0.0",
+    "@typescript-eslint/parser": "^4.0.1",
+    "eslint": "^7.8.1",
+    "eslint-config-alloy": "^3.8.0",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
