--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "hbs": "^4.1.1",
     "helmet": "^4.1.0",
     "highland": "^3.0.0-beta.10",
+    "ismobilejs": "^1.1.1",
     "jaeger-client": "^3.18.1",
     "jsondiffpatch": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
