refactor: use ramda instead of futil

--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "express-session": "^1.17.1",
     "file-type": "^15.0.0",
     "fs-extra": "^9.0.1",
-    "futil": "^1.67.0",
     "graphql": "^15.3.0",
     "graphql-type-json": "^0.3.2",
     "hashids": "^2.2.1",
@@ -156,6 +155,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/pump": "^1.1.0",
     "@types/qs": "^6.9.4",
+    "@types/ramda": "^0.27.14",
     "@types/redis": "^2.8.27",
     "@types/redlock": "^4.0.1",
     "@types/request-ip": "^0.0.35",
