--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.3",
     "@nestjs/websockets": "^7.4.4",
+    "@prisma/client": "2.6.2",
     "@sentry/node": "^5.23.0",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.4",
@@ -127,6 +128,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^7.4.4",
+    "@prisma/cli": "2.6.2",
     "@types/amqplib": "^0.5.13",
     "@types/bluebird": "^3.5.32",
     "@types/bull": "^3.14.2",
@@ -168,10 +170,11 @@
     "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
-    "eslint": "^7.8.1",
+    "eslint": "^7.9.0",
     "eslint-config-alloy": "^3.8.0",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.1",
     "pretty-quick": "^3.0.2",
