--- a/.env.base
+++ b/.env.base
@@ -46,13 +46,13 @@ MQ_URL=amqp://localhost
 #MQ_USERNAME=
 
 # --- redis ---
-REDIS_ENABLE=false
-REDIS_HOST=localhost
-REDIS_PORT=6379
-# (Optional)
-REDIS_PASSWORD=
-# default: 0
-REDIS_DB=0
+#REDIS_ENABLE=false
+#REDIS_HOST=localhost
+#REDIS_PORT=6379
+## (Optional)
+#REDIS_PASSWORD=
+## default: 0
+#REDIS_DB=0
 
 # other modules used
 # default: 1
