--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "@nestjs/schedule": "^0.4.0",
     "@nestjs/swagger": "^4.6.0",
     "@nestjs/terminus": "^7.0.1",
-    "@nestjs/typeorm": "^7.1.3",
+    "@nestjs/typeorm": "^7.1.4",
     "@nestjs/websockets": "^7.4.4",
-    "@prisma/client": "2.6.2",
+    "@prisma/client": "2.7.0",
     "@sentry/node": "^5.23.0",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.4",
@@ -74,7 +74,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
-    "file-type": "^15.0.0",
+    "file-type": "^15.0.1",
     "fs-extra": "^9.0.1",
     "graphql": "^15.3.0",
     "graphql-type-json": "^0.3.2",
@@ -95,7 +95,7 @@
     "mongoose-autopopulate": "^0.12.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "node-buffs": "^0.8.4",
+    "node-buffs": "^0.8.5",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.11",
     "opentracing": "^0.14.4",
@@ -115,7 +115,7 @@
     "rxjs": "^6.6.3",
     "sharp": "^0.26.0",
     "shortid": "^2.2.15",
-    "snyk": "^1.393.0",
+    "snyk": "^1.397.1",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.4.0",
     "swagger-ui-express": "^4.1.4",
@@ -128,10 +128,11 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^7.4.4",
-    "@prisma/cli": "2.6.2",
+    "@prisma/cli": "2.7.0",
     "@types/amqplib": "^0.5.13",
     "@types/bluebird": "^3.5.32",
     "@types/bull": "^3.14.2",
+    "@types/chance": "^1.1.0",
     "@types/cli-color": "^2.0.0",
     "@types/common-tags": "^1.8.0",
     "@types/compression": "^1.7.0",
@@ -168,10 +169,11 @@
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "eslint": "^7.9.0",
     "eslint-config-alloy": "^3.8.0",
+    "eslint-plugin-import": "^2.22.0",
     "husky": "^4.3.0",
     "jest": "^26.4.2",
     "mysql": "^2.18.1",
