--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "qs": "^6.9.4",
     "ramda": "^0.27.1",
     "redis": "^3.0.2",
+    "redis-dataloader": "^1.0.2",
     "redlock": "^4.1.0",
     "request-ip": "^2.1.3",
     "response-time": "^2.3.2",
