--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "apollo-opentracing": "^1.5.0",
     "apollo-server-cache-redis": "^1.2.2",
     "apollo-server-caching": "^0.5.2",
-    "apollo-server-express": "^2.17.0",
-    "apollo-server-plugin-response-cache": "^0.5.3",
+    "apollo-server-express": "^2.18.0",
+    "apollo-server-plugin-response-cache": "^0.5.4",
     "axios": "^0.20.0",
     "body-parser": "^1.19.0",
     "bull": "^3.18.0",
@@ -79,10 +79,11 @@
     "graphql-type-json": "^0.3.2",
     "hashids": "^2.2.1",
     "hbs": "^4.1.1",
-    "helmet": "^4.1.0",
+    "helmet": "^4.1.1",
     "highland": "^3.0.0-beta.10",
     "ismobilejs": "^1.1.1",
     "jaeger-client": "^3.18.1",
+    "json5": "^2.1.3",
     "jsondiffpatch": "^0.4.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
@@ -94,7 +95,7 @@
     "mongoose-autopopulate": "^0.12.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "node-buffs": "^0.8.6",
+    "node-buffs": "^0.8.7",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.11",
     "opentracing": "^0.14.4",
@@ -158,7 +159,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/pump": "^1.1.0",
     "@types/qs": "^6.9.5",
-    "@types/ramda": "^0.27.17",
+    "@types/ramda": "^0.27.18",
     "@types/redis": "^2.8.27",
     "@types/redlock": "^4.0.1",
     "@types/request-ip": "^0.0.35",
@@ -169,8 +170,8 @@
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
     "eslint": "^7.9.0",
     "eslint-config-alloy": "^3.8.0",
     "eslint-plugin-import": "^2.22.0",
