refactor: sms verify code

--- a/.appenv.base.yml
+++ b/.appenv.base.yml
@@ -59,6 +59,10 @@ sms:
       "SignName": "xxx", //
       "RegionId": "xxx"
     }
+  verify_code_checks:
+    force_all: false
+    locations:
+      payment_order: false
 
 # -- sentry --
 sentry:
