--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "clean": "rm -rf ./dist && rm -rf ./declaration",
     "tsc": "tsc",
     "build": "yarn tsc",
-    "dev": "ts-node --transpile-only src/dev.ts",
-    "dev:watch": "nodemon --exec ts-node --transpile-only src/dev.ts",
+    "dev": "node -r ts-node/register src/dev.ts",
+    "dev:watch": "nodemon --exec node -r ts-node/register src/dev.ts",
     "prebuild": "yarn clean",
     "postinstall!": "yarn build",
     "test": "ENV=test jest",
@@ -116,7 +116,7 @@
     "rxjs": "^6.6.3",
     "sharp": "^0.26.1",
     "shortid": "^2.2.15",
-    "snyk": "^1.400.0",
+    "snyk": "^1.401.0",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.4.0",
     "swagger-ui-express": "^4.1.4",
@@ -172,7 +172,7 @@
     "@types/xml2js": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
-    "eslint": "^7.9.0",
+    "eslint": "^7.10.0",
     "eslint-config-alloy": "^3.8.0",
     "eslint-plugin-import": "^2.22.0",
     "husky": "^4.3.0",
@@ -182,7 +182,7 @@
     "prettier": "^2.1.2",
     "pretty-quick": "^3.0.2",
     "sqlite3": "^5.0.0",
-    "supertest": "^5.0.0-1",
+    "supertest": "^5.0.0",
     "ts-jest": "^26.4.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
