refactor: upgrade typeorm to 0.2.28

--- a/.appenv.base.yml
+++ b/.appenv.base.yml
@@ -31,6 +31,7 @@ features:
   # ; endpoint is /swagger
   swagger_enable: false
   cron_enable: false
+  error_stats: false
 
 tracing:
   enabled: false
