refactor: random id generator

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "cli-color": "^2.0.0",
     "common-tags": "^1.8.0",
     "compression": "^1.7.4",
+    "connect-redis": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "cron": "^1.8.2",
     "cron-parser": "^2.16.3",
@@ -116,7 +117,7 @@
     "rxjs": "^6.6.3",
     "sharp": "^0.26.1",
     "shortid": "^2.2.15",
-    "snyk": "^1.410.2",
+    "snyk": "^1.410.4",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.4.0",
     "swagger-ui-express": "^4.1.4",
@@ -129,18 +130,20 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^7.4.4",
-    "@prisma/cli": "2.8.0",
-    "@types/amqplib": "^0.5.13",
+    "@prisma/cli": "2.8.1",
+    "@types/amqplib": "^0.5.14",
     "@types/bluebird": "^3.5.32",
-    "@types/bull": "^3.14.3",
+    "@types/bull": "^3.14.4",
     "@types/chance": "^1.1.0",
     "@types/cli-color": "^2.0.0",
     "@types/common-tags": "^1.8.0",
     "@types/compression": "^1.7.0",
+    "@types/connect-redis": "^0.0.14",
     "@types/cron": "^1.7.2",
     "@types/email-templates": "^7.1.0",
     "@types/express": "4.17.8",
     "@types/express-rate-limit": "^5.1.0",
+    "@types/express-session": "^1.17.0",
     "@types/fs-extra": "^9.0.1",
     "@types/helmet": "^0.0.48",
     "@types/highland": "^2.12.10",
@@ -153,13 +156,13 @@
     "@types/minio": "^7.0.6",
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.4",
-    "@types/node": "^12.12.64",
+    "@types/node": "^12.12.67",
     "@types/node-fetch": "^2.5.7",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
     "@types/pump": "^1.1.0",
     "@types/qs": "^6.9.5",
-    "@types/ramda": "^0.27.20",
+    "@types/ramda": "^0.27.23",
     "@types/redis": "^2.8.27",
     "@types/redlock": "^4.0.1",
     "@types/request-ip": "^0.0.35",
