--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.4",
     "@nestjs/websockets": "^7.4.4",
-    "@sentry/node": "^5.26.0",
+    "@prisma/client": "2.9.0",
+    "@sentry/node": "^5.27.0",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.4",
     "amqplib": "^0.6.0",
@@ -118,7 +119,7 @@
     "rxjs": "^6.6.3",
     "sharp": "^0.26.2",
     "shortid": "^2.2.15",
-    "snyk": "^1.419.0",
+    "snyk": "^1.419.1",
     "socket.io": "^2.3.0",
     "socket.io-redis": "^5.4.0",
     "swagger-ui-express": "^4.1.4",
