chore: update lock

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,10 @@ uploads/
 coverage/
 yarn-error.log
 database.db
-.yarn
+.yarn/*
+#!.yarn/cache
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
 .clinic/
