--- a/package.json
+++ b/package.json
@@ -14,16 +14,13 @@
   "scripts": {
     "clean": "rm -rf ./dist && rm -rf ./declaration",
     "tsc": "tsc",
-    "build": "yarn tsc",
+    "build": "yarn clean && yarn tsc",
     "dev": "node -r ts-node/register src/dev.ts",
     "dev:watch": "nodemon --exec node -r ts-node/register src/dev.ts",
-    "prebuild": "yarn clean",
-    "postinstall!": "yarn build",
     "test": "ENV=test jest",
     "test:cov": "ENV=test jest --coverage --no-cache",
     "check:circular": "npx madge --circular --extensions ts ./",
     "snyk-protect": "snyk protect",
-    "prepare": "yarn run snyk-protect",
     "doc": "npx @compodoc/compodoc -p tsconfig.json -s"
   },
   "dependencies": {
@@ -44,7 +41,7 @@
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.5",
     "@nestjs/websockets": "^7.6.3",
-    "@prisma/client": "2.13.0",
+    "@prisma/client": "2.13.1",
     "@sentry/node": "^5.29.2",
     "accesscontrol": "^2.2.1",
     "alipay-sdk": "^3.1.5",
@@ -54,6 +51,7 @@
     "apollo-server-caching": "^0.5.2",
     "apollo-server-express": "^2.19.0",
     "apollo-server-plugin-response-cache": "^0.5.6",
+    "apollo-server-types": "^0.6.1",
     "axios": "^0.21.0",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
@@ -61,6 +59,7 @@
     "cache-manager": "^3.4.0",
     "cache-manager-redis-store": "^2.0.0",
     "chance": "^1.1.7",
+    "check-disk-space": "^2.1.0",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cli-color": "^2.0.0",
@@ -82,7 +81,7 @@
     "graphql": "^15.4.0",
     "graphql-type-json": "^0.3.2",
     "handlebars": "^4.7.6",
-    "hashids": "^2.2.5",
+    "hashids": "^2.2.8",
     "hbs": "^4.1.1",
     "helmet": "^4.2.0",
     "highland": "^3.0.0-beta.10",
@@ -93,6 +92,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "lru-cache": "^6.0.0",
+    "lru_map": "^0.4.1",
     "luxon": "^1.25.0",
     "mime-types": "^2.1.27",
     "minio": "^7.0.18",
@@ -108,11 +108,13 @@
     "ow": "^0.20.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "passport-strategy": "^1.0.0",
     "pump": "^3.0.0",
     "qiniu": "^7.3.2",
     "qrcode": "^1.4.4",
     "qs": "^6.9.4",
     "ramda": "^0.27.1",
+    "raw-body": "^2.4.1",
     "redis": "^3.0.2",
     "redis-dataloader": "^1.0.2",
     "redlock": "^4.2.0",
@@ -127,15 +129,17 @@
     "swagger-ui-express": "^4.1.5",
     "tmp": "^0.2.1",
     "typeorm": "^0.2.29",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2",
     "winston": "^3.3.3",
+    "ws": "^7.4.1",
     "xlsx": "^0.16.9",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
     "@nestjs/testing": "^7.6.3",
-    "@prisma/cli": "2.13.0",
+    "@prisma/cli": "2.13.1",
     "@types/amqplib": "^0.5.16",
     "@types/bluebird": "^3.5.33",
     "@types/bull": "^3.14.4",
@@ -155,7 +159,7 @@
     "@types/highland": "^2.12.10",
     "@types/jaeger-client": "^3.15.4",
     "@types/jest": "^26.0.19",
-    "@types/lodash": "^4",
+    "@types/lodash": "^4.14.165",
     "@types/lru-cache": "^5.1.0",
     "@types/luxon": "^1.25.0",
     "@types/mime-types": "^2.1.0",
@@ -178,6 +182,7 @@
     "@types/socket.io-redis": "^1.0.26",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
+    "@types/ws": "^7.4.0",
     "@types/xml2js": "^0.4.7",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
