--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     // Disallow features that require cross-file information for emit.
     //"isolatedModules": true,
     // Import non-ES modules as default imports.
-    // "esModuleInterop": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
     "sourceMap": true,
     "declaration": true,
