--- a/package.json
+++ b/package.json
@@ -155,14 +155,17 @@
     "@types/express-rate-limit": "^5.1.0",
     "@types/express-session": "^1.17.3",
     "@types/fs-extra": "^9.0.5",
+    "@types/glob": "^7",
     "@types/helmet": "^4.0.0",
     "@types/highland": "^2.12.10",
     "@types/jaeger-client": "^3.15.4",
     "@types/jest": "^26.0.19",
+    "@types/js-yaml": "^3",
     "@types/lodash": "^4.14.165",
     "@types/lru-cache": "^5.1.0",
     "@types/luxon": "^1.25.0",
     "@types/mime-types": "^2.1.0",
+    "@types/minimatch": "^3",
     "@types/minio": "^7.0.6",
     "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
@@ -189,8 +192,11 @@
     "eslint": "^7.16.0",
     "eslint-config-alloy": "^3.8.2",
     "eslint-plugin-import": "^2.22.1",
+    "glob": "^7.1.6",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
+    "js-yaml": "^3.14.1",
+    "minimatch": "^3.0.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
@@ -200,6 +206,7 @@
     "supertest": "^6.0.1",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.1.1",
+    "tslib": "^2.0.3",
     "typescript": "^4.1.3"
   },
   "husky": {
